# spangap-core

./: .gitignore  CLAUDE.md  INTERNALS.md  INTERNALS.old.md  LICENSE.md  Makefile  README-old.old.md  README.md  straddle.yaml
docs/: auth-internals.md  auth.md  cli-internals.md  cli.md  cron-internals.md  cron.md  development.md  flash-partitions.md  fs-internals.md  fs.md  getting-started.old.md  idf-tweaks-internals.md  idf-tweaks.md  init-internals.md  init.md  its-internals.md  its.md  key-fixes.md  lcd.md  logging-internals.md  logging.md  memory-internals.md  memory.md  ntp.md  ntp.old.md  ota.md  ota.old.md  power-management-internals.md  power-management.md  remote-access.md  storage-internals.md  storage.md  tls.old.md  unified-fs-api.old.md  web-interface.md  web-interface.old.md  webrtc.old.md  wireguard.old.md
docs/plans/: Kconfig.md  evictable_storage.md  future-ESP32-C5-and-classic.md  its-oob-packets.md  lua.md  pm-task-boost.md  readme-rewrite.md  straddles.md
esp-idf/: CLAUDE.md  CLAUDE.old.md  CMakeLists.txt  INTERNALS.md  Kconfig  Makefile  README-old.old.md  README.md  idf_component.yml  project_include.cmake  sdkconfig.defaults.spangap
esp-idf/cmake/: bootstrap.cmake
esp-idf/components/spanfs/: CMakeLists.txt  LICENSE  README.md  idf_component.yml  project_include.cmake
esp-idf/components/spanfs/include/: spanfs.h
esp-idf/components/spanfs/src/: spanfs.c  spanfs_esp.c
esp-idf/components/spanfs/test/: host_reader.c  run_host_tests.sh
esp-idf/components/spanfs/tools/: mkspanfs.py
esp-idf/data/factory_state/: boot  crontab  net_up  timezones.json
esp-idf/include/: auth.h  cli.h  compat.h  cron.h  fs.h  its.h  log.h  mem.h  pm.h  service.h  spangap.h  spi_helper.h  storage.h  storage_db.h
esp-idf/scripts/: gen-partitions.py  reallyclean.sh  report-partitions.py  report-sizes.py  update-zones.py  write-build-epoch.py  write-build-info.py
esp-idf/src/: auth.cpp  cli.cpp  cli_cmd_fs.cpp  cli_cmd_mount.cpp  cli_cmd_sys.cpp  cron.cpp  fs.cpp  heap_track_stub.c  its.cpp  log.cpp  mem_new.cpp  pm.cpp  service.cpp  spangap_init.cpp  spi_helper.cpp  storage.cpp  storage_db.cpp
